--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,18 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.navbar {
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  border: red;
+  background: red;
+  width: 120px;
 }
