--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,11 @@
   background: red;
   width: 120px;
 }
+
+.form-demo {
+  flex-direction: column;
+  display: flex;
+  width: 30%;
+  padding: 10px;
+  gap: 10px;
+}
